<resources>
    <string name="app_name">MotoProtect</string>
    <string name="enter_your_pin">Masukkan PIN anda....</string>
    <string name="ok">OK</string>
    <string name="forgot_your_pin">Lupa PIN?</string>
    <string name="welcome_text">Silahkan masukkan PIN anda pada kolom di bawah. PIN default : 1998</string>
    <string name="hub_header_text">Selamat datang! Tekan \'Hidupkan Bluetooth\' untuk menghidupkan Bluetooth, lalu tekan \'Refresh List\' untuk melihat list device.</string>
    <string name="changePinButton">Ubah PIN</string>
    <string name="refreshListButton">Refresh List</string>
    <string name="enableBtButton">Hidupkan Bluetooth</string>
    <string name="btAdapter_null_message">HP anda tidak mempunyai Bluetooth.</string>
    <string name="hub_no_paired_device">Tidak ada device yang terpasang.</string>
    <string name="send">Send</string>
    <string name="default_chat">Test 123</string>
    <string name="chat_hint">Masukkan pesan anda di sini</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="toggle_encryption">Toggle Encryption</string>
    <string name="decrypt">Decrypt</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis ac est vel porttitor. Etiam at rhoncus tellus. Etiam iaculis, risus quis iaculis blandit, mauris erat malesuada nunc, eu tincidunt erat libero at mauris. Nulla tempor molestie magna, hendrerit ultrices massa feugiat et. Integer rutrum leo ut ex dictum viverra. Aliquam ultricies est id augue vulputate, at scelerisque dolor blandit. Vivamus lectus odio, rhoncus eu odio placerat, imperdiet interdum diam. Nam mauris metus, pretium in diam id, imperdiet aliquet massa. Maecenas at nunc ut ligula molestie consequat. Maecenas quis justo eget tortor egestas imperdiet. Quisque at venenatis risus. Nullam pulvinar eros in nunc gravida, at accumsan nisi feugiat. Maecenas ac iaculis mauris. Praesent eros ipsum, vestibulum et nisl sit amet, fermentum tempor arcu. Morbi quis tortor augue. Cras consectetur quis ante ac molestie. Mauris vitae eros eu turpis commodo rutrum non porta libero. Morbi viverra elementum orci aliquam aliquet. Curabitur vitae neque faucibus, fringilla magna at, condimentum massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas consectetur pellentesque pulvinar. Curabitur eget semper purus. Morbi sit amet dui nec lacus tincidunt accumsan nec ut purus. Nam hendrerit, sapien nec consectetur blandit, ligula nunc varius tortor, et sollicitudin lorem arcu non sem. Suspendisse suscipit orci et massa viverra tristique. Pellentesque finibus urna eu purus efficitur feugiat. Mauris volutpat eget orci venenatis feugiat. Donec euismod eros velit, sed congue quam iaculis ac. Nullam viverra odio nunc, vitae ornare velit sagittis in. Maecenas pharetra et tortor id consectetur. Praesent dictum mi et tincidunt iaculis. Duis in felis placerat, aliquet lacus a, gravida sapien. Morbi blandit scelerisque arcu a interdum. Sed congue ipsum a lectus molestie, ac accumsan dolor convallis. Etiam nulla odio, lacinia et condimentum tempus, tempor id est. Donec nibh risus, condimentum in eros eget, dapibus blandit felis. Duis vel vestibulum nulla. Vivamus ut erat ultricies, interdum sapien ut, lacinia diam. Pellentesque consectetur purus arcu, id bibendum turpis viverra a. Etiam quis felis lobortis, ultrices metus id, mollis orci. Praesent semper ut orci quis posuere. Nulla egestas hendrerit dui a sagittis. Proin a massa vitae orci posuere consectetur sit amet quis nisl. Quisque eleifend tincidunt magna sit amet mattis. Etiam efficitur nulla ut blandit rutrum. Ut sagittis sed metus sit amet convallis. Donec euismod varius magna in sollicitudin. Nulla tristique libero nec porta venenatis. Vestibulum eget pretium lorem. Nulla scelerisque egestas finibus. Aenean mollis ac sapien eget efficitur. Praesent vitae diam massa. Sed sagittis dolor massa, ut lobortis ipsum sollicitudin sed. Quisque ac tempus urna. Nunc molestie ante egestas arcu venenatis, eget dictum ligula porta. Vivamus semper aliquet massa, in feugiat ipsum vestibulum tristique. In hac habitasse platea dictumst. Praesent accumsan metus a eros dapibus, a aliquam felis interdum. Phasellus dolor mauris, mattis sed mauris porta, tempor convallis tortor.</string>
    <string name="reset_key">Reset Key</string>
    <string name="toggle_decryption">Toggle Decryption</string>
    <string name="sign">Sign</string>
    <string name="hash_reply">Hash Reply</string>
    <string name="verify">Unlock device</string>
    <string name="keyExchangeButton">Tukar Kunci</string>
    <string name="changeUserPinButtonText">Ubah Pin</string>
    <string name="daftarkan_hp">Daftarkan HP</string>
</resources>
