<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConnectActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/chatField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_chat"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:hint="@string/chat_hint"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/sendMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/send"
                android:visibility="gone"/>

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/connect" />

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/disconnect"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</layout>