<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HubActivity"
        android:orientation="vertical">
        <Button
            android:id="@+id/enableBtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enableBtButton"
            android:layout_margin="8dp"/>
        <Button
            android:id="@+id/refreshListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refreshListButton"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/changePinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changePinButton"
            android:layout_margin="8dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/hub_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hub_header_text"
            android:textSize="20sp"
            android:layout_margin="8dp"/>
        <ListView
            android:id="@+id/paired_devices_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="8dp"
            />
    </LinearLayout>
</layout>
