<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:text="@string/welcome_text"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/inputIdField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:hint="@string/inputIdFieldHint"
            android:autofillHints="@string/inputIdFieldHint"
            android:ems="10"
            android:inputType="text"
            android:layout_margin="8dp"/>
        <EditText
            android:id="@+id/inputPinField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:hint="@string/enter_your_pin"
            android:autofillHints="@string/enter_your_pin"
            android:ems="10"
            android:inputType="numberPassword"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/inputPinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ok" />
<!--            TODO : Implement Forgotten PIN management-->
<!--        <Button-->
<!--            android:id="@+id/forgotPinButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:text="@string/forgot_your_pin" />-->
    </LinearLayout>
</layout>